# language-learn

./: .gitignore  README.md
SQL/: grant
bash/: arithmetic.sh  basic.sh  file-RW.sh  if-test.sh  loop.sh
c-c++/: pthread_test.c
c-c++/automake-test/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  hello  hello.c  hello.h
c-c++/automake-test/.deps/: hello.Po
c-c++/automake-test/autom4te.cache/: output.0  output.1  output.2  requests  traces.1  traces.2  traces.3
c-c++/cpp-auto-run/: .main  autorun.py  main.cpp  online.aaa  run.sh  tool.h
c-c++/makefile-test/: AAA.cpp  AAA.h  Makefile  main.cpp
c-c++/makefile-test2/: Makefile  main.c  test.c
english/: oral
java/: enable-remote-vm-monitor.sh  readme.txt
java/annotation-learn/: pom.xml
java/annotation-learn/src/main/java/dd/zjut/: App.java
java/java-skill-learn/: build.gradle
java/java-skill-learn/gradle/wrapper/: gradle-wrapper.properties
java/java-skill-learn/src/dd/: Main.java
java/lambda-learn/: pom.xml
java/reflect-learn/: pom.xml  readme.txt
python/: a+b.py  basic.py  file-op.py  hadoop-data-gen.py  loop.py  simulate_stack.py  srm.py  study.py
ruby/: Gemfile  alias-method.rb  basic.rb  class-2less_than.rb  class-related.rb  delegate_and_attr_accessor.rb  io.rb  loop.rb  mixin.rb  module_eval_test.rb  open-uri.rb  self.rb  string.rb  symbol.rb  test.rb  thread-test.rb  time-with-zone.rb  yield.rb
ruby/class-related/: class-2less_than.rb  class-def.rb  class-method.rb
scala/: Test.scala  language-grammer.note
(+25 files in other folders)
